@@ -139,6 +139,7 @@ MODULE_SCOPE int warpPerspective(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj
 
 MODULE_SCOPE int filter2D(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int getGaborKernel(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
+MODULE_SCOPE int getGaussianKernel(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int blur(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int GaussianBlur(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
 MODULE_SCOPE int medianBlur(void *cd, Tcl_Interp *interp, int objc, Tcl_Obj *const*objv);
