@@ -1,6 +1,7 @@
 2021-09-20 Danilo Chang
 
 	* Apply Christian's patch (FileStorage interface)
+	* Implement command: getGaussianKernel
 	* Implement command: compareHist
 
 2021-09-19 Danilo Chang
